# MD2X

./: .env.example  .gitignore  LICENSE  Makefile  README.md  _check.py  install.sh  md2pdf.py  md2pdf.yaml  md2x.example.yaml  md2x.py  md2x.yaml  package.json  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-06-04-md2pdf-decompose.md  2026-06-04-md2x-multiformat-packaging.md  2026-06-05-md2x-ai-site.md  2026-06-06-authored-sections.md  2026-06-06-md2x-living-site-pr-a-skill-scaffold.md  2026-06-06-md2x-living-site-pr-b-design-system.md  2026-06-06-md2x-living-site-pr-c-blocks-mode.md  2026-06-06-md2x-living-site-pr-d-hybrid-mode.md  2026-06-06-md2x-living-site-pr-e-full-mode.md  2026-06-06-md2x-living-site-pr-f-archetypes-artifacts.md  2026-06-06-md2x-living-site-pr-g-guardrails-evals.md  2026-06-06-md2x-living-site-pr-h-flip-defaults-docs.md  2026-06-06-section-aware-living-site.md
docs/superpowers/specs/: 2026-06-04-md2pdf-decompose-design.md  2026-06-04-md2x-multiformat-packaging-design.md  2026-06-05-md2x-ai-site-design.md  2026-06-05-md2x-ai-site-v2-design.md  2026-06-06-authored-sections-design.md  2026-06-06-blocks-interactive-engine-design.md  2026-06-06-md2x-living-site-design.md
evals/: README.md  run_performance_eval.py  run_quality_eval.py  thariq_rubric.py
evals/reference/: deck.md  editor.md  explainer.md  report.md
examples/: sample.md
src/md2pdf/: __init__.py  cli.py  config.py  pipeline.py
src/md2x/: __init__.py  __main__.py  binaries.py  cli.py  config.py  dotenv.py  formats.py  log.py  mermaid.py  pandoc.py  paths.py  pipeline.py  renderers.py
src/md2x/site/: __init__.py  agents.py  archetypes.py  authored_agent.py  blocks.py  blocks_agent.py  blocks_render.py  cli.py  content.py  css_contract.py  design_css.py  design_tree.py  (+13 more)
tests/: conftest.py  test_agent_json_mode.py  test_authored_pipeline.py  test_authored_render.py  test_binaries.py  test_cli.py  test_config.py  test_css_contract.py  test_design_tree.py  test_dotenv.py  test_e2e.py  test_formats.py  test_log.py  test_mermaid.py  test_packaging.py  test_pandoc_cmd.py  test_paths.py  test_pipeline.py  test_renderers.py  test_section_builder.py  test_site_agents.py  test_site_archetypes.py  test_site_blocks.py  test_site_blocks_pipeline.py  test_site_blocks_render.py  test_site_cli.py  test_site_config.py  test_site_content.py  test_site_coverage_guardrail.py  test_site_css_guardrails.py  test_site_deploy.py  test_site_design_css.py  test_site_fallback.py  test_site_full.py  test_site_full_pipeline.py  test_site_guardrails.py  test_site_invoke.py  test_site_models.py  test_site_modes.py  test_site_multipage.py  (+8 more)
tests/evals/: test_eval_scripts_import.py  test_tier1_invariants.py
(+39 files in other folders)
