[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "md2x"
version = "0.1.0"
description = "Convert Markdown (with Mermaid diagrams) to PDF, DOCX, HTML, EPUB, and LaTeX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ChaoticQubit", email = "chaoticqubit@gmail.com" }]
keywords = ["markdown", "pdf", "pandoc", "mermaid", "docx", "html", "epub", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
    "Topic :: Documentation",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/ChaoticQubit/MD2X"
Repository = "https://github.com/ChaoticQubit/MD2X"
Issues = "https://github.com/ChaoticQubit/MD2X/issues"

[project.scripts]
md2x = "md2x.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
