[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "md2x"
version = "0.2.0"
description = "Convert Markdown (with Mermaid diagrams) to PDF, DOCX, HTML, EPUB, and LaTeX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ChaoticQubit", email = "chaoticqubit@gmail.com" }]
keywords = ["markdown", "pdf", "pandoc", "mermaid", "docx", "html", "epub", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
    "Topic :: Documentation",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]
publish = ["build>=1.2", "twine>=5"]
ai = ["agno[models]>=2.2", "httpx>=0.27"]
deploy = ["httpx>=0.27"]
all = ["md2x[ai]", "md2x[deploy]"]

[project.urls]
Homepage = "https://github.com/ChaoticQubit/MD2X"
Repository = "https://github.com/ChaoticQubit/MD2X"
Issues = "https://github.com/ChaoticQubit/MD2X/issues"

[project.scripts]
md2x = "md2x.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"md2x.site.skill" = ["*.md", "render-modes/*.md", "archetypes/*.md", "artifacts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
